# AbstractOperatorsInterns

./: .gitignore  README.md  emotion_speech_text  emotion_speech_text.py  emotions.py  pyproject.toml  requirements.txt  socialBot.py  speechRecognitionFile.py  tester.py  user_information.db  user_information.db-journal
client/: .gitignore  package-lock.json  package.json
client/src/: App.css  App.js  fileUpload.js  index.js  output.css
client/src/components/: Footer.js  Navbar.js
client/src/pages/: FileUpload.js  Home.js  SocialBot.js  pages.css
