[tool.poetry]
name = "socialbot"
version = "0.1.0"
description = ""
authors = ["Svar <spandya@imsa.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.54.4"
python-dotenv = "^1.0.1"
sumy = "^0.11.0"
matplotlib = "^3.9.2"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
