[tool.poetry]
name = "abstractoperatorsinterns"
version = "0.1.0"
description = ""
authors = ["SVPandya <spandya@imsa.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0.84"
speechrecognition = "^3.13.0"
flask-cors = "^5.0.0"
cors = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
